--- a/SwgGodClient.cfg
+++ b/SwgGodClient.cfg
@@ -7,20 +7,20 @@
 #--------------------------------------------------------------------
 #C:/Users/jojoj/Desktop/SWG/SWG Source Client v1.2.1/
 [GodClient]
-scriptClassPath="C:/Users/jojoj/Perforce/swg/current/data/sku.0/sys.server/compiled/game/script"
-scriptSourcePath="C:/Users/jojoj/Perforce/swg/current/dsrc/sku.0/sys.server/compiled/game/script"
+scriptClassPath="C:/Users/jojoj/Desktop/SWG/SWG Source Client v1.2.1/"
+scriptSourcePath="C:/Users/jojoj/Desktop/SWG/SWG Source Client v1.2.1/"
 scriptEditor="C:\Program Files (x86)\Emerald Editor Community\Crimson Editor SVN286M\cedt.exe"
 
-templateClientIffPath="C:/Users/jojoj/Perforce/swg/current/data/sku.0/sys.shared/compiled/game/object"
-templateClientSourcePath="C:/Users/jojoj/Perforce/swg/current/dsrc/sku.0/sys.shared/compiled/game/object"
-templateServerIffPath="C:/Users/jojoj/Perforce/swg/current/data/sku.0/sys.server/compiled/game/object"
-templateServerSourcePath="C:/Users/jojoj/Perforce/swg/current/dsrc/sku.0/sys.server/compiled/game/object"
+templateClientIffPath="C:/Users/jojoj/Desktop/SWG/SWG Source Client v1.2.1/"
+templateClientSourcePath="C:/Users/jojoj/Desktop/SWG/SWG Source Client v1.2.1/"
+templateServerIffPath="C:/Users/jojoj/Desktop/SWG/SWG Source Client v1.2.1/"
+templateServerSourcePath="C:/Users/jojoj/Desktop/SWG/SWG Source Client v1.2.1/"
 templateEditor="C:\Program Files (x86)\Emerald Editor Community\Crimson Editor SVN286M\cedt.exe"
 
-localClientSrcPath="c:/swg/current/dsrc/sku.0/sys.shared/compiled/game"
-localClientDataPath="c:/swg/current/data/sku.0/sys.shared/compiled/game"
-localServerSrcPath="c:/swg/current/dsrc/sku.0/sys.server/compiled/game"
-localServerDataPath="c:/swg/current/data/sku.0/sys.server/compiled/game"
+localClientSrcPath="C:/Users/jojoj/Desktop/SWG/SWG Source Client v1.2.1/"
+localClientDataPath="C:/Users/jojoj/Desktop/SWG/SWG Source Client v1.2.1/"
+localServerSrcPath="C:/Users/jojoj/Desktop/SWG/SWG Source Client v1.2.1/"
+localServerDataPath="C:/Users/jojoj/Desktop/SWG/SWG Source Client v1.2.1/"
 localServerCrcStringTable="C:/Users/jojoj/Desktop/SWG/SWG Source Client v1.2.1/misc/object_template_crc_string_table.iff"
 
 
