--- a/SwgGodClient.cfg
+++ b/SwgGodClient.cfg
@@ -1,47 +1,40 @@
-#--------------------------------------------------------------------
-# client options
-#--------------------------------------------------------------------
 
 .include "client.cfg"
 
 #--------------------------------------------------------------------
-#C:/Users/jojoj/Desktop/SWG/SWG Source Client v1.2.1/
+
 [GodClient]
-scriptClassPath="C:/Users/jojoj/Desktop/SWG/SWG Source Client v1.2.1/"
-scriptSourcePath="C:/Users/jojoj/Desktop/SWG/SWG Source Client v1.2.1/"
-scriptEditor="C:\Program Files (x86)\Emerald Editor Community\Crimson Editor SVN286M\cedt.exe"
+   
 
-templateClientIffPath="C:/Users/jojoj/Desktop/SWG/SWG Source Client v1.2.1/"
-templateClientSourcePath="C:/Users/jojoj/Desktop/SWG/SWG Source Client v1.2.1/"
-templateServerIffPath="C:/Users/jojoj/Desktop/SWG/SWG Source Client v1.2.1/"
-templateServerSourcePath="C:/Users/jojoj/Desktop/SWG/SWG Source Client v1.2.1/"
-templateEditor="C:\Program Files (x86)\Emerald Editor Community\Crimson Editor SVN286M\cedt.exe"
-
-localClientSrcPath="C:/Users/jojoj/Desktop/SWG/SWG Source Client v1.2.1/"
-localClientDataPath="C:/Users/jojoj/Desktop/SWG/SWG Source Client v1.2.1/"
-localServerSrcPath="C:/Users/jojoj/Desktop/SWG/SWG Source Client v1.2.1/"
-localServerDataPath="C:/Users/jojoj/Desktop/SWG/SWG Source Client v1.2.1/"
-localServerCrcStringTable="C:/Users/jojoj/Desktop/SWG/SWG Source Client v1.2.1/misc/object_template_crc_string_table.iff"
-
-
-serverObjectTemplateTheaterDirectory="../../dsrc/sku.0/sys.server/compiled/game"
-serverDataTableTheaterDirectory="../../dsrc/sku.0/sys.server/compiled/game"
-sharedObjectTemplateTheaterDirectory="../../dsrc/sku.0/sys.shared/compiled/game"
-clientDataFileTheaterDirectory="../../dsrc/sku.0/sys.client/compiled/game"
-serverObjectTemplateTheaterPath="object/building/poi"
-serverDataTableTheaterPath="datatables/poi"
-sharedObjectTemplateTheaterPath="object/building/poi"
-clientDataFileTheaterPath="clientdata/poi"
-sharedTerrainDirectory="../../data/sku.0/sys.shared/compiled/game/terrain"
-
-	frameRateLimit=60
+frameRateLimit=60
+loadServerObjects=true
+connectToPerforce=false
 	
-	loadServerObjects=false
-	connectToPerforce=false
-#[ParticleManager]
-#debugOriginIconEnabled=1
+scriptClassPath, "C:/Users/jojoj/Desktop/SWG/godclient/data/sku.0/sys.server/compiled/game/script");
+scriptSourcePath, "C:/Users/jojoj/Desktop/SWG/godclient/dsrc/sku.0/sys.server/compiled/game/script");
+scriptEditor, "Textpad.exe");
 
-    
-[SharedNetwork]
-oldestUnacknowledgedTimeout=10000000
-noDataTimeout=100000000
+templateClientIffPath, "C:/Users/jojoj/Desktop/SWG/godclient/data/sku.0/sys.shared/compiled/game/object");
+templateClientSourcePath, "C:/Users/jojoj/Desktop/SWG/godclient/dsrc/sku.0/sys.shared/compiled/game/object");
+templateServerIffPath, "C:/Users/jojoj/Desktop/SWG/godclient/data/sku.0/sys.server/compiled/game/object");
+templateServerSourcePath, "C:/Users/jojoj/Desktop/SWG/godclient/dsrc/sku.0/sys.server/compiled/game/object");
+templateEditor, "Textpad.exe");
+
+localClientSrcPath, "C:/Users/jojoj/Desktop/SWG/godclient/dsrc/sku.0/sys.shared/compiled/game");
+localClientDataPath, "C:/Users/jojoj/Desktop/SWG/godclient/data/sku.0/sys.shared/compiled/game");
+localServerSrcPath, "C:/Users/jojoj/Desktop/SWG/godclient/dsrc/sku.0/sys.server/compiled/game");
+localServerDataPath, "C:/Users/jojoj/Desktop/SWG/godclient/data/sku.0/sys.server/compiled/game");
+localServerCrcStringTable, "C:/Users/jojoj/Desktop/SWG/godclient/data/sku.0/sys.server/built/game/misc/object_template_crc_string_table.iff");
+
+
+
+serverObjectTemplateTheaterDirectory, "../../dsrc/sku.0/sys.server/compiled/game");
+serverDataTableTheaterDirectory, "../../dsrc/sku.0/sys.server/compiled/game");
+sharedObjectTemplateTheaterDirectory, "../../dsrc/sku.0/sys.shared/compiled/game");
+clientDataFileTheaterDirectory, "../../dsrc/sku.0/sys.client/compiled/game");
+serverObjectTemplateTheaterPath, "object/building/poi");
+serverDataTableTheaterPath, "datatables/poi");
+sharedObjectTemplateTheaterPath, "object/building/poi");
+clientDataFileTheaterPath, "clientdata/poi");
+sharedTerrainDirectory, "../../data/sku.0/sys.shared/built/game/terrain");
+	
