--- a/SwgGodClient.cfg
+++ b/SwgGodClient.cfg
@@ -1,40 +1,59 @@
 
-.include "client.cfg"
-
+#.include "client.cfg"
+.include "common.cfg"
 #--------------------------------------------------------------------
 
 [GodClient]
-   
-
 frameRateLimit=60
 loadServerObjects=true
 connectToPerforce=false
 	
-scriptClassPath, "C:/Users/jojoj/Desktop/SWG/godclient/data/sku.0/sys.server/compiled/game/script");
-scriptSourcePath, "C:/Users/jojoj/Desktop/SWG/godclient/dsrc/sku.0/sys.server/compiled/game/script");
-scriptEditor, "Textpad.exe");
+scriptClassPath="C:/Users/jojoj/Desktop/SWG/local/data/sku.0/sys.server/compiled/game/script"
+scriptSourcePath="C:/Users/jojoj/Desktop/SWG/local/dsrc/sku.0/sys.server/compiled/game/script"
+scriptEditor="Textpad.exe"
 
-templateClientIffPath, "C:/Users/jojoj/Desktop/SWG/godclient/data/sku.0/sys.shared/compiled/game/object");
-templateClientSourcePath, "C:/Users/jojoj/Desktop/SWG/godclient/dsrc/sku.0/sys.shared/compiled/game/object");
-templateServerIffPath, "C:/Users/jojoj/Desktop/SWG/godclient/data/sku.0/sys.server/compiled/game/object");
-templateServerSourcePath, "C:/Users/jojoj/Desktop/SWG/godclient/dsrc/sku.0/sys.server/compiled/game/object");
-templateEditor, "Textpad.exe");
+templateClientIffPath="C:/Users/jojoj/Desktop/SWG/local/data/sku.0/sys.shared/compiled/game/object"
+templateClientSourcePath="C:/Users/jojoj/Desktop/SWG/local/dsrc/sku.0/sys.shared/compiled/game/object"
+templateServerIffPath="C:/Users/jojoj/Desktop/SWG/local/data/sku.0/sys.server/compiled/game/object"
+templateServerSourcePath="C:/Users/jojoj/Desktop/SWG/local/dsrc/sku.0/sys.server/compiled/game/object"
+templateEditor="Textpad.exe"
 
-localClientSrcPath, "C:/Users/jojoj/Desktop/SWG/godclient/dsrc/sku.0/sys.shared/compiled/game");
-localClientDataPath, "C:/Users/jojoj/Desktop/SWG/godclient/data/sku.0/sys.shared/compiled/game");
-localServerSrcPath, "C:/Users/jojoj/Desktop/SWG/godclient/dsrc/sku.0/sys.server/compiled/game");
-localServerDataPath, "C:/Users/jojoj/Desktop/SWG/godclient/data/sku.0/sys.server/compiled/game");
-localServerCrcStringTable, "C:/Users/jojoj/Desktop/SWG/godclient/data/sku.0/sys.server/built/game/misc/object_template_crc_string_table.iff");
+localClientSrcPath="C:/Users/jojoj/Desktop/SWG/local/dsrc/sku.0/sys.shared/compiled/game"
+localClientDataPath="C:/Users/jojoj/Desktop/SWG/local/data/sku.0/sys.shared/compiled/game"
+localServerSrcPath="C:/Users/jojoj/Desktop/SWG/local/dsrc/sku.0/sys.server/compiled/game"
+localServerDataPath="C:/Users/jojoj/Desktop/SWG/local/data/sku.0/sys.server/compiled/game"
+localServerCrcStringTable="C:/Users/jojoj/Desktop/SWG/local/data/sku.0/sys.server/built/game/misc/object_template_crc_string_table.iff"
 
 
 
-serverObjectTemplateTheaterDirectory, "../../dsrc/sku.0/sys.server/compiled/game");
-serverDataTableTheaterDirectory, "../../dsrc/sku.0/sys.server/compiled/game");
-sharedObjectTemplateTheaterDirectory, "../../dsrc/sku.0/sys.shared/compiled/game");
-clientDataFileTheaterDirectory, "../../dsrc/sku.0/sys.client/compiled/game");
-serverObjectTemplateTheaterPath, "object/building/poi");
-serverDataTableTheaterPath, "datatables/poi");
-sharedObjectTemplateTheaterPath, "object/building/poi");
-clientDataFileTheaterPath, "clientdata/poi");
-sharedTerrainDirectory, "../../data/sku.0/sys.shared/built/game/terrain");
+serverObjectTemplateTheaterDirectory="../../dsrc/sku.0/sys.server/compiled/game"
+serverDataTableTheaterDirectory="../../dsrc/sku.0/sys.server/compiled/game"
+sharedObjectTemplateTheaterDirectory="../../dsrc/sku.0/sys.shared/compiled/game"
+clientDataFileTheaterDirectory="../../dsrc/sku.0/sys.client/compiled/game"
+serverObjectTemplateTheaterPath="object/building/poi"
+serverDataTableTheaterPath="datatables/poi"
+sharedObjectTemplateTheaterPath="object/building/poi"
+clientDataFileTheaterPath="clientdata/poi"
+sharedTerrainDirectory="../../data/sku.0/sys.shared/built/game/terrain"
+
+[Station]
+    subscriptionFeatures=1
+    gameFeatures=65535
+
+[ClientGame]
+    loginServerPort0=44453
+    loginServerAddress0=142.44.136.137
+	skipIntro=1
+	disableCutScenes=1
+	skipSplash=1
+	0fd345d9 = true
+	freeChaseCameraMaximumZoom=1
+
+[ClientSkeletalAnimation]
+	lodManagerEnable=0
 	
+[ClientUserInterface]
+	debugExamine=1
+	debugClipboardExamine=0
+	allowTargetAnything=1
+	drawNetworkIds=1
