--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ binkw32.dll
 bottom.tre
 client.cfg
 SwgGodClient.cfg
+SwgClient_o.exe
 characterlist_*.txt
 data_animation_00.tre
 data_music_00.tre
