--- a/SwgGodClient.cfg
+++ b/SwgGodClient.cfg
@@ -8,21 +8,21 @@ frameRateLimit=60
 loadServerObjects=true
 connectToPerforce=false
 	
-scriptClassPath="C:/Users/jojoj/Desktop/SWG/local/data/sku.0/sys.server/compiled/game/script"
-scriptSourcePath="C:/Users/jojoj/Desktop/SWG/local/dsrc/sku.0/sys.server/compiled/game/script"
+scriptClassPath="C:/swg/data/sku.0/sys.server/compiled/game/script"
+scriptSourcePath="C:/swg/dsrc/sku.0/sys.server/compiled/game/script"
 scriptEditor="Textpad.exe"
 
-templateClientIffPath="C:/Users/jojoj/Desktop/SWG/local/data/sku.0/sys.shared/compiled/game/object"
-templateClientSourcePath="C:/Users/jojoj/Desktop/SWG/local/dsrc/sku.0/sys.shared/compiled/game/object"
-templateServerIffPath="C:/Users/jojoj/Desktop/SWG/local/data/sku.0/sys.server/compiled/game/object"
-templateServerSourcePath="C:/Users/jojoj/Desktop/SWG/local/dsrc/sku.0/sys.server/compiled/game/object"
+templateClientIffPath="C:/swg/data/sku.0/sys.shared/compiled/game/object"
+templateClientSourcePath="C:/swg/dsrc/sku.0/sys.shared/compiled/game/object"
+templateServerIffPath="C:/swg/data/sku.0/sys.server/compiled/game/object"
+templateServerSourcePath="C:/swg/dsrc/sku.0/sys.server/compiled/game/object"
 templateEditor="Textpad.exe"
 
-localClientSrcPath="C:/Users/jojoj/Desktop/SWG/local/dsrc/sku.0/sys.shared/compiled/game"
-localClientDataPath="C:/Users/jojoj/Desktop/SWG/local/data/sku.0/sys.shared/compiled/game"
-localServerSrcPath="C:/Users/jojoj/Desktop/SWG/local/dsrc/sku.0/sys.server/compiled/game"
-localServerDataPath="C:/Users/jojoj/Desktop/SWG/local/data/sku.0/sys.server/compiled/game"
-localServerCrcStringTable="C:/Users/jojoj/Desktop/SWG/local/data/sku.0/sys.server/built/game/misc/object_template_crc_string_table.iff"
+localClientSrcPath="C:/swg/dsrc/sku.0/sys.shared/compiled/game"
+localClientDataPath="C:/swg/data/sku.0/sys.shared/compiled/game"
+localServerSrcPath="C:/swg/dsrc/sku.0/sys.server/compiled/game"
+localServerDataPath="C:/swg/data/sku.0/sys.server/compiled/game"
+localServerCrcStringTable="C:/swg/data/sku.0/sys.server/built/game/misc/object_template_crc_string_table.iff"
 
 
 
